; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pthread.c_pthread_join.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pthread.c_pthread_join.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i8*, i32 }

@pte_thread_reuse_lock = common dso_local global i32 0, align 4
@ESRCH = common dso_local global i32 0, align 4
@PTHREAD_CREATE_DETACHED = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@EDEADLK = common dso_local global i32 0, align 4
@PTE_OS_OK = common dso_local global i32 0, align 4
@PTE_OS_INTERRUPTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pthread_join(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %3, align 8
  store i8** %1, i8*** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = bitcast i32* %8 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %9, %struct.TYPE_2__** %7, align 8
  %10 = load i32, i32* @pte_thread_reuse_lock, align 4
  %11 = call i32 @pte_osMutexLock(i32 %10)
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %13 = icmp eq %struct.TYPE_2__* null, %12
  br i1 %13, label %23, label %14

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = bitcast i32* %15 to %struct.TYPE_2__*
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %18, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %14, %2
  %24 = load i32, i32* @ESRCH, align 4
  store i32 %24, i32* %5, align 4
  br label %35

25:                                               ; preds = %14
  %26 = load i64, i64* @PTHREAD_CREATE_DETACHED, align 8
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = icmp eq i64 %26, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* @EINVAL, align 4
  store i32 %32, i32* %5, align 4
  br label %34

33:                                               ; preds = %25
  store i32 0, i32* %5, align 4
  br label %34

34:                                               ; preds = %33, %31
  br label %35

35:                                               ; preds = %34, %23
  %36 = load i32, i32* @pte_thread_reuse_lock, align 4
  %37 = call i32 @pte_osMutexUnlock(i32 %36)
  %38 = load i32, i32* %5, align 4
  %39 = icmp eq i32 %38, 0
  br i1 %39, label %40, label %83

40:                                               ; preds = %35
  %41 = call i32* (...) @pthread_self()
  store i32* %41, i32** %6, align 8
  %42 = load i32*, i32** %6, align 8
  %43 = icmp eq i32* null, %42
  br i1 %43, label %44, label %46

44:                                               ; preds = %40
  %45 = load i32, i32* @ENOENT, align 4
  store i32 %45, i32* %5, align 4
  br label %82

46:                                               ; preds = %40
  %47 = load i32*, i32** %6, align 8
  %48 = load i32*, i32** %3, align 8
  %49 = call i64 @pthread_equal(i32* %47, i32* %48)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %53

51:                                               ; preds = %46
  %52 = load i32, i32* @EDEADLK, align 4
  store i32 %52, i32* %5, align 4
  br label %81

53:                                               ; preds = %46
  %54 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %55 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %54, i32 0, i32 3
  %56 = load i32, i32* %55, align 8
  %57 = call i32 @pte_osThreadWaitForEnd(i32 %56)
  store i32 %57, i32* %5, align 4
  %58 = load i32, i32* @PTE_OS_OK, align 4
  %59 = load i32, i32* %5, align 4
  %60 = icmp eq i32 %58, %59
  br i1 %60, label %61, label %72

61:                                               ; preds = %53
  %62 = load i8**, i8*** %4, align 8
  %63 = icmp ne i8** %62, null
  br i1 %63, label %64, label %69

64:                                               ; preds = %61
  %65 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %66 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %65, i32 0, i32 2
  %67 = load i8*, i8** %66, align 8
  %68 = load i8**, i8*** %4, align 8
  store i8* %67, i8** %68, align 8
  br label %69

69:                                               ; preds = %64, %61
  %70 = load i32*, i32** %3, align 8
  %71 = call i32 @pthread_detach(i32* %70)
  store i32 %71, i32* %5, align 4
  br label %80

72:                                               ; preds = %53
  %73 = load i32, i32* %5, align 4
  %74 = load i32, i32* @PTE_OS_INTERRUPTED, align 4
  %75 = icmp eq i32 %73, %74
  br i1 %75, label %76, label %77

76:                                               ; preds = %72
  store i32 0, i32* %5, align 4
  br label %79

77:                                               ; preds = %72
  %78 = load i32, i32* @ESRCH, align 4
  store i32 %78, i32* %5, align 4
  br label %79

79:                                               ; preds = %77, %76
  br label %80

80:                                               ; preds = %79, %69
  br label %81

81:                                               ; preds = %80, %51
  br label %82

82:                                               ; preds = %81, %44
  br label %83

83:                                               ; preds = %82, %35
  %84 = load i32, i32* %5, align 4
  ret i32 %84
}

declare dso_local i32 @pte_osMutexLock(i32) #1

declare dso_local i32 @pte_osMutexUnlock(i32) #1

declare dso_local i32* @pthread_self(...) #1

declare dso_local i64 @pthread_equal(i32*, i32*) #1

declare dso_local i32 @pte_osThreadWaitForEnd(i32) #1

declare dso_local i32 @pthread_detach(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
